--- a/Bloggie.Web/Views/AdminTags/Add.cshtml
+++ b/Bloggie.Web/Views/AdminTags/Add.cshtml
@@ -14,12 +14,12 @@
     <form method="post">
         <div class="mb-3">
             <label class="form-label">Name</label>
-            <input type="text" class="form-control" id="name"/>
+            <input type="text" class="form-control" id="name" name="name"/>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Display Name</label>
-            <input type="text" class="form-control" id="displayName" />
+            <input type="text" class="form-control" id="displayName" name="displayName"/>
         </div>
 
         <div class="mb-3">
